Screen alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -443,16 +443,146 @@ input[type="submit"]:hover{
 /*Start animations*/
 @keyframes pulse {
     0%{
-        box-shadow: #221e3f);
+        box-shadow: 0 0 0 0 rgba(0, 230, 115, 1));
     }
     70%{
-        box-shadow: #221e3f);
+        box-shadow: 0 0 0 2rem rgba(3, 168, 17, 1));
     }
     100%{
-        box-shadow: #221e3f);
+        box-shadow: 0 0 0 0 rgba(0, 138, 224, 1));
     }
 }
 /*End animations*/
 
 /*Start media queries*/
+@media screen and (max-width: 768px){
+    body{
+    background: url("images/sitebg.jpg") no-repeat center fixed;
+    background-size: cover;
+    }
+
+    .landing-text h1{
+        font-size: 15rem;
+    }
+    .landing-text h6{
+        font-size: 1.7rem;
+    }
+    .nav-list{
+        flex-direction: column;
+    }
+
+    li{
+        margin: 2rem 0;
+    }
+    .nav-link{
+        font-size: 4.5rem
+    }
+    .about-heading h1{
+        font-size: 8rem;
+    }
+    .section-heading h1{
+        font-size: 3rem;
+    }
+    .about-details .nav-list{
+        flex-direction: initial;
+    }
+    .about-details li{
+        margin: 0 2rem;
+    }
+    .icon-container{
+        width: 7rem;
+        height: 7rem;
+    }
+    .icon-container i{
+        font-size: 4rem;
+    }
+    .timeline ul{
+        margin: 0 0 0 auto;
+    }
+    .timeline .date::before{
+        left: -20rem;
+    }
+    .timeline .date::after{
+        left: -5.9rem;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .menu-toggler{
+        top: 2rem;
+        right: 2rem;
+    }
+    .landing-text h1{
+        font-size: 8rem;
+    }
+    .landing-text h6{
+        font-size: 1.4rem;
+    }
+    .nav-link{
+        font-size: 3.5rem
+    }
+    .about .container{
+        flex-direction: column;
+    }
+    .profile-img{
+        margin: 0 0 7rem 0;
+    }
+    .portfolio-item{
+        flex-direction: column;
+    }
+    .portfolio-img{
+        margin: 0 0 2rem 0;
+        order: 1;
+    }
+    .portfolio-description{
+        margin: 0;
+        order: 2;
+    }
+    .timeline p{
+        font-size: 1.6rem;
+    }
+    .timeline .date::before{
+        font-size: 1.4rem;
+    }
+    form{
+        width: 100%;
+    }
+    .up{
+        right: 2rem;
+    }
+}
 /*End media queries*/
+
+
+@font-face {
+    font-family: 'Alternity';
+    src: url('fonts/Alternity.eot');
+    src: local('☺'), url('fonts/Alternity.woff') format('woff'), url('fonts/Alternity.ttf') format('truetype'), url('fonts/Alternity.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Alternity Italic';
+    src: url('fonts/Alternity Italic.eot');
+    src: local('☺'), url('fonts/Alternity Italic.woff') format('woff'), url('fonts/Alternity Italic.ttf') format('truetype'), url('fonts/Alternity Italic.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Alternity Bold';
+    src: url('fonts/Alternity Bold.eot');
+    src: local('☺'), url('fonts/Alternity Bold.woff') format('woff'), url('fonts/Alternity Bold.ttf') format('truetype'), url('fonts/Alternity Bold.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Alternity Bold Italic';
+    src: url('fonts/Alternity Bold Italic.eot');
+    src: local('☺'), url('fonts/Alternity Bold Italic.woff') format('woff'), url('fonts/Alternity Bold Italic.ttf') format('truetype'), url('fonts/Alternity Bold Italic.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
